# test_file_generator

./: .gitignore  CMakeLists.txt  README.md  examples.cpp  examples.h  examples.hpp  main.cpp  task.md
documentation/: mermaid.md
include/codegen/: class_unit.hpp  factory.hpp  field_unit.hpp  method_unit.hpp  print_operator_unit.hpp  types.hpp  unit.hpp
include/codegen/cpp/: cpp_factory.hpp  cpp_units.hpp
include/codegen/csharp/: csharp_factory.hpp  csharp_units.hpp
include/codegen/java/: java_factory.hpp  java_units.hpp
src/: class_unit.cpp  class_unit.h  factory.h  field_unit.cpp  field_unit.h  method_unit.cpp  method_unit.h  print_operator_unit.cpp  print_operator_unit.h  text_util.h  types.h  unit.cpp  unit.h
src/cpp/: cpp_class_unit.cpp  cpp_class_unit.h  cpp_factory.cpp  cpp_factory.h  cpp_field_unit.cpp  cpp_field_unit.h  cpp_method_unit.cpp  cpp_method_unit.h  cpp_print_operator_unit.cpp  cpp_print_operator_unit.h  cpp_units.cpp  cpp_units.h
src/csharp/: csharp_access.h  csharp_class_unit.cpp  csharp_class_unit.h  csharp_factory.cpp  csharp_factory.h  csharp_field_unit.cpp  csharp_field_unit.h  csharp_method_unit.cpp  csharp_method_unit.h  csharp_print_operator_unit.cpp  csharp_print_operator_unit.h  csharp_units.cpp  csharp_units.h
src/java/: java_access.h  java_class_unit.cpp  java_class_unit.h  java_factory.cpp  java_factory.h  java_field_unit.cpp  java_field_unit.h  java_method_unit.cpp  java_method_unit.h  java_print_operator_unit.cpp  java_print_operator_unit.h  java_units.cpp  java_units.h
tests/: verify.ps1  verify.sh
tools/: emit.cpp
